add validation for form

--- a/src/index.html
+++ b/src/index.html
@@ -110,10 +110,10 @@
                 Просто заполните форму заявки<br>
                 и мы перезвоним вам в течении 10 минут
             </div>
-            <form class="feed-form" action="#">
-                <input name="name" required type="text" placeholder="Ваше имя">
-                <input name="phone" required type="number" placeholder="Ваш телефон">
-                <input name="email" required type="email" placeholder="Ваш E-mail">
+            <form id="consultation-form" class="feed-form" action="#">
+                <input required name="name" type="text" placeholder="Ваше имя">
+                <input required name="phone" type="number" placeholder="Ваш телефон">
+                <input required name="email" type="email" placeholder="Ваш E-mail">
                 <button class="button button_submit">Заказать консультацию</button>
             </form>
         </div>
@@ -314,8 +314,6 @@
                     </div>
                 </div>
             </div>
-
-
             <div class="catalog__content" data-tabs="runnig">
                 <div class="catalog-item">
                     <div class="catalog-item__wrapper">
@@ -447,6 +445,7 @@
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script src="js/slick.min.js"></script>
+    <script src="js/jquery.validate.min.js"></script>
     <script src="js/script.js"></script>
 </body>
 
