add masked phone for form

--- a/src/index.html
+++ b/src/index.html
@@ -112,7 +112,7 @@
             </div>
             <form id="consultation-form" class="feed-form" action="#">
                 <input required name="name" type="text" placeholder="Ваше имя">
-                <input required name="phone" type="number" placeholder="Ваш телефон">
+                <input required name="phone" placeholder="Ваш телефон">
                 <input required name="email" type="email" placeholder="Ваш E-mail">
                 <button class="button button_submit">Заказать консультацию</button>
             </form>
@@ -413,7 +413,7 @@
             </div>
             <form class="feed-form feed-form_mt25" action="#">
                 <input name="name" required type="text" placeholder="Ваше имя">
-                <input name="phone" required type="number" placeholder="Ваш телефон">
+                <input name="phone" required  placeholder="Ваш телефон">
                 <input name="email" required type="email" placeholder="Ваш E-mail">
                 <button class="button button_submit">Заказать консультацию</button>
             </form>
@@ -429,7 +429,7 @@
             </div>
             <form class="feed-form feed-form_mt25" action="#">
                 <input name="name" required type="text" placeholder="Ваше имя">
-                <input name="phone" required type="number" placeholder="Ваш телефон">
+                <input name="phone" required placeholder="Ваш телефон">
                 <input name="email" required type="email" placeholder="Ваш E-mail">
                 <button class="button button_submit">Купить</button>
             </form>
@@ -446,6 +446,7 @@
     <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script src="js/slick.min.js"></script>
     <script src="js/jquery.validate.min.js"></script>
+    <script src="js/jquery.maskedinput.min.js"></script>
     <script src="js/script.js"></script>
 </body>
 
