add new changes in catalog

--- a/src/index.html
+++ b/src/index.html
@@ -140,13 +140,13 @@
             <h2 class="title">Каталог пульсометров</h2>
             <ul class="catalog__tabs">
                 <li class="catalog__tab catalog__tab_active" data-tabs="fitnes">
-                    <div>Для фитнеса</div>
+                    <div class="catalog_li-div">Для фитнеса</div>
                 </li>
                 <li class="catalog__tab" data-tabs="runnig">
-                    <div>Для бега</div>
+                    <div class="catalog_li-div" >Для бега</div>
                 </li>
                 <li class="catalog__tab" data-tabs="triatlon">
-                    <div>Для триатлона</div>
+                    <div class="catalog_li-div" >Для триатлона</div>
                 </li>
             </ul>
 
