--- a/src/index.html
+++ b/src/index.html
@@ -66,9 +66,7 @@
             </h2>
             <div class="advantages__items">
                 <div class="advantages__item">
-                    <div class="advantages__icon">
-                        <img src="icons/advantages/cup.png" alt="cup">
-                    </div>
+                    <img class="advantages__icon" src="icons/advantages/cup.png" alt="cup">
                     <div class="advantages__subtitle">Делимся опытом</div>
                     <div class="advantages__descr">
                         Наши сотрудники всегда готовы поделиться своим опытом,<br> так как сами бегают полумарафоны,
@@ -76,9 +74,7 @@
                     </div>
                 </div>
                 <div class="advantages__item">
-                    <div class="advantages__icon">
-                        <img src="icons/advantages/heart.png" alt="heart">
-                    </div>
+                    <img class="advantages__icon advantages__icon_animated" src="icons/advantages/heart.png" alt="heart">
                     <div class="advantages__subtitle">Заботимся о здоровье</div>
                     <div class="advantages__descr">
                         Мы работаем для того,<br> чтобы Ваши занятия спортом шли на пользу Вашему здоровью и были в
@@ -87,9 +83,7 @@
                     </div>
                 </div>
                 <div class="advantages__item">
-                    <div class="advantages__icon">
-                        <img src="icons/advantages/shoe.png" alt="shoe">
-                    </div>
+                    <img class="advantages__icon" src="icons/advantages/shoe.png" alt="shoe">
                     <div class="advantages__subtitle">Учимся бегать</div>
                     <div class="advantages__descr">
                         Помогаем с обучением<br> правильной технике бега!<br> Дружим с крупнейшей школой бега в России -
@@ -119,7 +113,7 @@
         </div>
     </section>
 
-    <section class="carousel">
+    <div class="carousel">
         <div class="container">
             <div class="carousel__inner">
                 <div>
@@ -133,7 +127,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </div>
 
     <section class="catalog">
         <div class="container">
@@ -156,7 +150,7 @@
                         <div class="catalog-item__content catalog-item__content_active">
                             <img src="img/pulsometr.png" alt="pulsoments" class="catalog-item__img">
                             <div class="catalog-item__subtitle">Пульсометр Polar FT4</div>
-                            <div href="#" class="catalog-item__descr">
+                            <div class="catalog-item__descr">
                                 Для первых шагов в тренировках, основанных на сердечном ритме
                             </div>
                             <a href="#" class="catalog-item__link">Подробнее</a>
@@ -183,7 +177,7 @@
                         <div class="catalog-item__content catalog-item__content_active">
                             <img src="img/pulsometr.png" alt="pulsoments" class="catalog-item__img">
                             <div class="catalog-item__subtitle">Пульсометр Polar FT1</div>
-                            <div href="#" class="catalog-item__descr">
+                            <div class="catalog-item__descr">
                                 Для первых шагов в тренировках, основанных на сердечном ритме
                             </div>
                             <a href="#" class="catalog-item__link">Подробнее</a>
@@ -210,7 +204,7 @@
                         <div class="catalog-item__content catalog-item__content_active">
                             <img src="img/pulsometr.png" alt="pulsoments" class="catalog-item__img">
                             <div class="catalog-item__subtitle">Пульсометр Polar FT2</div>
-                            <div href="#" class="catalog-item__descr">
+                            <div class="catalog-item__descr">
                                 Для первых шагов в тренировках, основанных на сердечном ритме
                             </div>
                             <a href="#" class="catalog-item__link">Подробнее</a>
@@ -237,7 +231,7 @@
                         <div class="catalog-item__content catalog-item__content_active">
                             <img src="img/pulsometr.png" alt="pulsoments" class="catalog-item__img">
                             <div class="catalog-item__subtitle">Пульсометр Polar FT3</div>
-                            <div href="#" class="catalog-item__descr">
+                            <div class="catalog-item__descr">
                                 Для первых шагов в тренировках, основанных на сердечном ритме
                             </div>
                             <a href="#" class="catalog-item__link">Подробнее</a>
@@ -264,7 +258,7 @@
                         <div class="catalog-item__content catalog-item__content_active">
                             <img src="img/pulsometr.png" alt="pulsoments" class="catalog-item__img">
                             <div class="catalog-item__subtitle">Пульсометр Polar FT5</div>
-                            <div href="#" class="catalog-item__descr">
+                            <div class="catalog-item__descr">
                                 Для первых шагов в тренировках, основанных на сердечном ритме
                             </div>
                             <a href="#" class="catalog-item__link">Подробнее</a>
@@ -291,7 +285,7 @@
                         <div class="catalog-item__content catalog-item__content_active">
                             <img src="img/pulsometr.png" alt="pulsoments" class="catalog-item__img">
                             <div class="catalog-item__subtitle">Пульсометр Polar FT6</div>
-                            <div href="#" class="catalog-item__descr">
+                            <div class="catalog-item__descr">
                                 Для первых шагов в тренировках, основанных на сердечном ритме
                             </div>
                             <a href="#" class="catalog-item__link">Подробнее</a>
@@ -320,7 +314,7 @@
                         <div class="catalog-item__content catalog-item__content_active">
                             <img src="img/pulsometr.png" alt="pulsoments" class="catalog-item__img">
                             <div class="catalog-item__subtitle">Пульсометр Polar FT1</div>
-                            <div href="#" class="catalog-item__descr">
+                            <div class="catalog-item__descr">
                                 Для первых шагов в тренировках, основанных на сердечном ритме
                             </div>
                             <a href="#" class="catalog-item__link">Подробнее</a>
@@ -349,7 +343,7 @@
                         <div class="catalog-item__content catalog-item__content_active">
                             <img src="img/pulsometr.png" alt="pulsoments" class="catalog-item__img">
                             <div class="catalog-item__subtitle">Пульсометр Polar FT1</div>
-                            <div href="#" class="catalog-item__descr">
+                            <div class="catalog-item__descr">
                                 Для первых шагов в тренировках, основанных на сердечном ритме
                             </div>
                             <a href="#" class="catalog-item__link">Подробнее</a>
@@ -376,7 +370,7 @@
                         <div class="catalog-item__content catalog-item__content_active">
                             <img src="img/pulsometr.png" alt="pulsoments" class="catalog-item__img">
                             <div class="catalog-item__subtitle">Пульсометр Polar FT1</div>
-                            <div href="#" class="catalog-item__descr">
+                            <div class="catalog-item__descr">
                                 Для первых шагов в тренировках, основанных на сердечном ритме
                             </div>
                             <a href="#" class="catalog-item__link">Подробнее</a>
@@ -447,8 +441,8 @@
     </a>
 
 
-    <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
-    <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script src="js/slick.min.js"></script>
     <script src="js/jquery.validate.min.js"></script>
     <script src="js/jquery.maskedinput.min.js"></script>
