--- a/src/index.html
+++ b/src/index.html
@@ -74,7 +74,8 @@
                     </div>
                 </div>
                 <div class="advantages__item">
-                    <img class="advantages__icon advantages__icon_animated" src="icons/advantages/heart.png" alt="heart">
+                    <img class="advantages__icon advantages__icon_animated" src="icons/advantages/heart.png"
+                        alt="heart">
                     <div class="advantages__subtitle">Заботимся о здоровье</div>
                     <div class="advantages__descr">
                         Мы работаем для того,<br> чтобы Ваши занятия спортом шли на пользу Вашему здоровью и были в
@@ -137,10 +138,10 @@
                     <div class="catalog_li-div">Для фитнеса</div>
                 </li>
                 <li class="catalog__tab" data-tabs="runnig">
-                    <div class="catalog_li-div" >Для бега</div>
+                    <div class="catalog_li-div">Для бега</div>
                 </li>
                 <li class="catalog__tab" data-tabs="triatlon">
-                    <div class="catalog_li-div" >Для триатлона</div>
+                    <div class="catalog_li-div">Для триатлона</div>
                 </li>
             </ul>
 
@@ -407,7 +408,7 @@
             </div>
             <form class="feed-form feed-form_mt25" action="#">
                 <input name="name" required type="text" placeholder="Ваше имя">
-                <input name="phone" required  placeholder="Ваш телефон">
+                <input name="phone" required placeholder="Ваш телефон">
                 <input name="email" required type="email" placeholder="Ваш E-mail">
                 <button class="button button_submit">Заказать консультацию</button>
             </form>
@@ -435,6 +436,60 @@
             <div class="modal__descr">Наш менеджер свяжется с вами<br>в ближайшее время!</div>
         </div>
     </div>
+
+    <section class="feedback">
+        <div class="container">
+            <div class="title">
+                отзывы клиентов
+            </div>
+            <div class="feedback__items">
+                <div class="feedback__item">
+                    <div class="feedback__img">
+                        <img src="img/feed_1.png" alt="feed_3">
+                    </div>
+                    <div class="feedback__comment">
+                        <div class="feedback__comment__title">Ирина Иванченко </div>
+                        <div class="feedback__comment__subtitle">2 полумарафона</div>
+                        <div class="feedback__comment__descr">
+                            <p>Не знала, что себе купить - обратилась к ребятам из RunSmart - подобрали пульсометр,
+                                который подошёл именно под мои цели и финансовые возможности.Через некоторое время
+                                решила обновить гаджет - не раздумывая обратилась туда же.</p>
+                            <p>Новые цели - новый гаджет!</p>
+                            <p>Спасибо, RunSmart! </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="feedback__item">
+                    <div class="feedback__img">
+                        <img src="img/feed_2.png" alt="feed_2">
+                    </div>
+                    <div class="feedback__comment">
+                        <div class="feedback__comment__title">Иван Сёмочкин</div>
+                        <div class="feedback__comment__subtitle">1 полумарафон</div>
+                        <div class="feedback__comment__descr">
+                            <p>Крутая штука-пульсометр. Обычно без них бегал. Оказывается только хуже себе делал. </p>
+                            <p>Купил пульсометр, ещё в подарок получил тренировку. Со мной вместе провели первую тренировку, научили пользоваться новым гаджетом. Также объяснили основы анатомии, составили план тренировок на месяц вперёд.</p>
+                            <p>С ними подготовился к своему первому полумарафону! Спасибо!!!</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="feedback__item">
+                    <div class="feedback__img">
+                        <img src="img/feed_3.png" alt="feed_3">
+                    </div>
+                    <div class="feedback__comment">
+                        <div class="feedback__comment__title">Юлия Дашкина</div>
+                        <div class="feedback__comment__subtitle">2 полумарафон</div>
+                        <div class="feedback__comment__descr">
+                            <p>Долго не могла начать бегать, т.к. до этого несколько раз начинала, но становилось тяжело и я бросала. От друзей услышала о RunSmart и о беге с контролем пульса и решила попробовать.</p>
+                            <p>Позвонила, ребята поинтересовались моими целями и подобрали очень интересный вариант со скидкой! Теперь бегаю и наслаждаюсь бегом! Пробежала уже 2 полумарафона и несколько более коротких забегов и не намерена останавливаться!</p>
+                            <p>Спасибо!!!</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <a href="#up">
         <img src="icons/up.svg" alt="up" class="pageup">
