--- a/src/index.html
+++ b/src/index.html
@@ -35,18 +35,24 @@
                 <div class="promo__icons">
                     <div class="promo__icon">
                         <img src="icons/main_screen/timer.png" alt="timer">
+                        <div>
                         Время подбора:
                         10 минут
+                        </div>
                     </div>
                     <div class="promo__icon">
                         <img src="icons/main_screen/hand-cart.png" alt="hand-cart">
-                        Бесплатная
+                        <div>
+                            Бесплатная
                         доставка
+                        </div>
                     </div>
                     <div class="promo__icon">
                         <img src="icons/main_screen/messages.png" alt="messages">
-                        Ответим
+                        <div>
+                            Ответим
                         на все вопросы
+                        </div>
                     </div>
                 </div>
 
